# VLSP-2025-MedMT

./: .gitignore  .gitignore.test  README.md  SENTENCEPIECE_README.md  download_data.sh  main.py  pyproject.toml  requirements.txt  run_training.sh
configs/: moe_config.yaml
scripts/: convert_csv_to_jsonl.py  create_validation_split.py  csv_to_parallel_txt.py  evaluate_moe.py  prepare_data.py  prepare_tokenizer_data.py  preprocess.py  show_data_summary.py  spm_tokenizer.py  test_data_setup.py  test_moe_setup.py  test_tokenizer.py  tokenizer_manager.py  train_moe.py  train_moe_unsloth.py  train_tokenizer.py  unsloth.py
tokenizer_output/: spm_model.model
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
vlsp_moe/: README.md  notebook.ipynb  requirements.txt  run_training.sh
vlsp_moe/configs/: moe_config.yaml  moe_config.yaml.backup
vlsp_moe/evaluator/: evalutor.py  playground.ipynb
vlsp_moe/scripts/: README.md  analyze_medical_keywords.py  config.py  convert_csv_to_jsonl.py  create_validation_split.py  csv_to_parallel_txt.py  enhance_tokenizer_with_medical_keywords.py  evaluate_moe.py  extract_and_save_keywords.py  final_summary.py  infer.py  inference.py  train_moe.py  (+18 more)
(+2 files in other folders)
