[project]
name = "to-upload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.20.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "jsonlines>=3.1.0",
    "matplotlib>=3.7.0",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "peft>=0.6.0",
    "polars>=1.31.0",
    "protobuf>=3.20.0",
    "pyyaml>=6.0",
    "safetensors>=0.3.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
    "spacy>=3.6.0",
    "tensorboard>=2.13.0",
    "tokenizers>=0.14.0",
    "torch>=2.0.0",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "wandb>=0.15.0",
    "gdown>=4.7.0",
    "sentencepiece>=0.1.99",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "spacy>=3.6.0",
]
